--- a/index.html
+++ b/index.html
@@ -284,6 +284,30 @@
         rd.readAsDataURL(file);
       });
     }
+
+    // --- NUEVO: downscale para reducir 429/cuota ---
+    async function downscaleImage(file, maxSize = 1600, quality = 0.85) {
+      const img = await new Promise((res, rej) => {
+        const i = new Image();
+        i.onload = () => res(i);
+        i.onerror = rej;
+        i.src = URL.createObjectURL(file);
+      });
+
+      const scale = Math.min(1, maxSize / Math.max(img.width, img.height));
+      const w = Math.round(img.width * scale);
+      const h = Math.round(img.height * scale);
+
+      const canvas = document.createElement("canvas");
+      canvas.width = w; canvas.height = h;
+      const ctx = canvas.getContext("2d");
+      ctx.drawImage(img, 0, 0, w, h);
+
+      const blob = await new Promise(r => canvas.toBlob(r, "image/jpeg", quality));
+      URL.revokeObjectURL(img.src);
+      return new File([blob], (file.name || "ticket") + ".jpg", { type: "image/jpeg" });
+    }
+
     function safeParseJSON(text){
       if(!text) throw new Error("Salida vacía de la IA");
       let cleaned = text.trim();
@@ -335,32 +359,48 @@ Reglas:
         }]
       };
 
-      const models = ["gemini-1.5-flash","gemini-1.5-pro","gemini-2.0-flash"];
+      // NUEVO: solo modelos válidos en v1
+      const models = ["gemini-2.0-flash", "gemini-2.5-flash"];
+      const maxRetries = 3;
       let lastErr;
+
       for (const model of models){
         const url = `https://generativelanguage.googleapis.com/v1/models/${model}:generateContent?key=${encodeURIComponent(key)}`;
-        try{
-          log({ probando_modelo:model, endpoint:url });
-          const res = await fetch(url, {
-            method:"POST", headers:{ "Content-Type":"application/json" }, body: JSON.stringify(body)
-          });
-          const raw = await res.text();
-          let json = null; try { json = JSON.parse(raw); } catch {}
-          if (!res.ok){
-            lastErr = new Error(json?.error?.message || `HTTP ${res.status}`);
-            log({ fallo_modelo:model, status:res.status, body: json || raw });
-            continue;
+
+        for (let attempt = 0; attempt < maxRetries; attempt++) {
+          try{
+            log({ probando_modelo:model, endpoint:url, intento: attempt + 1 });
+            const res = await fetch(url, {
+              method:"POST", headers:{ "Content-Type":"application/json" }, body: JSON.stringify(body)
+            });
+            const raw = await res.text();
+            let json = null; try { json = JSON.parse(raw); } catch {}
+
+            if (res.status === 429) {
+              const delay = 1000 * Math.pow(2, attempt); // 1s, 2s, 4s
+              log({ aviso: "Cuota/Rate limit 429, reintentando...", espera_ms: delay });
+              await new Promise(r => setTimeout(r, delay));
+              continue;
+            }
+
+            if (!res.ok){
+              lastErr = new Error(json?.error?.message || `HTTP ${res.status}`);
+              log({ fallo_modelo:model, status: res.status, body: json || raw });
+              break; // no más intentos para este modelo con error no-429
+            }
+
+            const text = json?.candidates?.[0]?.content?.parts?.[0]?.text ?? json?.text ?? raw;
+            const parsed = safeParseJSON(text);
+            setOCRModel(model);
+            log({ modelo_ok:model });
+            return parsed;
+          }catch(e){
+            lastErr = e; log({ excepcion_modelo:model, error:e.message||String(e) });
+            await new Promise(r => setTimeout(r, 500));
           }
-          const text = json?.candidates?.[0]?.content?.parts?.[0]?.text ?? json?.text ?? raw;
-          const parsed = safeParseJSON(text);
-          setOCRModel(model);
-          log({ modelo_ok:model });
-          return parsed;
-        }catch(e){
-          lastErr = e; log({ excepcion_modelo:model, error:e.message||String(e) });
         }
       }
-      throw lastErr || new Error("No hay modelos disponibles para tu API key.");
+      throw lastErr || new Error("No fue posible usar OCR (modelos/cuota).");
     }
 
     // Cámara (modo A: foto)
@@ -445,13 +485,16 @@ Reglas:
         });
 
         log(`📷 Imagen: ${file.name||"captura"} (${Math.round(file.size/1024)} KB)`);
-        const b64 = await fileToBase64(file);
 
-        const result = await callGeminiVision(b64, file.type);
+        // NUEVO: comprimir antes de mandar a la IA
+        const compact = await downscaleImage(file, 1600, 0.85);
+        const b64 = await fileToBase64(compact);
+
+        const result = await callGeminiVision(b64, compact.type);
         log({ IA: result });
 
         const dateObj = normalizeDate(result?.date);
-        reviewState.file = file;
+        reviewState.file = compact;
         reviewState.provider = (result?.provider || "").toString().trim().slice(0,80) || "Ticket";
         reviewState.amount = normalizeAmount(result?.amount);
         reviewState.dateISO = dateObj.toISOString().slice(0,10);
