--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Gastos 2N — Compat</title>
+  <title>Gastos 2N — Compat (ZIP XHR)</title>
   <style>
     :root{--blue:#007aff;--border:#e5e7eb;--muted:#6b7280}
     *{box-sizing:border-box} body{margin:0;font-family:-apple-system,system-ui,Segoe UI,Roboto}
@@ -248,13 +248,43 @@ Reglas: solo JSON, punto decimal, total final.`;
     async function listEntriesMonth(ym, uid){ const [s,e]=monthRange(ym); const snap = await db.collection(`users/${uid}/entries`).where("date",">=",s).where("date","<",e).orderBy("date","asc").get(); return snap.docs.map(d=>({ id:d.id, ...d.data() })); }
     function toCSVRecords(entries){ const rows=[]; for(const e of entries){ if(e.category==="ingreso") continue; const col=MAP[e.category]||"VARIOUS"; const rec={}; COLUMNS.forEach(c=>rec[c]=(["DATE","CLIENT / PROVIDER","DESCRIPTION"].includes(c)?"":0)); const d=e.date?.toDate?e.date.toDate():new Date(e.date); rec["DATE"]=d.toLocaleDateString("es-ES"); rec["CLIENT / PROVIDER"]=e.provider||""; rec["DESCRIPTION"]=e.notes||""; const amount=Number(e.amount||0); if(COLUMNS.includes(col)) rec[col]=amount; else rec["VARIOUS"]=amount; let total=0; for(let i=2;i<=9;i++) total+=Number(rec[COLUMNS[i]]||0); rec["TOTAL"]=total; rows.push(rec);} return rows; }
 
+    // ---- Descarga robusta con XHR (evita fallos "Failed to fetch") ----
+    function downloadBlobXHR(url){
+      return new Promise((resolve,reject)=>{
+        const xhr = new XMLHttpRequest();
+        xhr.open("GET", url, true);
+        xhr.responseType = "blob";
+        xhr.onload = () => {
+          if (xhr.status >= 200 && xhr.status < 300) resolve(xhr.response);
+          else reject(new Error("HTTP "+xhr.status));
+        };
+        xhr.onerror = () => reject(new Error("Network error"));
+        xhr.send();
+      });
+    }
+
+    async function getBlobFromRefOrURL(e, storage){
+      const ref = e.photoPath ? storage.ref(e.photoPath) : storage.refFromURL(e.photoURL);
+      // 1) URL fresca
+      const url = await ref.getDownloadURL();
+      // 2) Primero XHR (suele saltarse bloqueos del fetch en iOS/Chrome)
+      try {
+        return await downloadBlobXHR(url);
+      } catch (err) {
+        // 3) Fallback a fetch
+        const resp = await fetch(url, { cache: "no-store" });
+        if (!resp.ok) throw new Error(`HTTP ${resp.status}`);
+        return await resp.blob();
+      }
+    }
+
     // CSV
     $("btnCSV").addEventListener("click", async ()=>{
       try{ const user=auth.currentUser; if(!user) return alert("Haz login"); const ym=$("expMonth").value; if(!ym) return alert("Selecciona un mes"); const entries=await listEntriesMonth(ym,user.uid); if(!entries.length) return alert("Sin gastos"); const rows=toCSVRecords(entries); const monthlabel=new Date(ym+"-01").toLocaleDateString("es-ES",{month:"long",year:"numeric"}); const today=new Date().toLocaleDateString("es-ES"); const csv=buildCSV(rows, monthlabel, today); saveAs(new Blob([csv], {type:"text/csv;charset=utf-8"}), `Informe_Gastos_${ym}.csv`); }
       catch(e){ log(e); alert("CSV error: "+(e.message||"")); }
     });
 
-    // ZIP con getBytes() autenticado (parche CORS)
+    // ZIP con XHR
     $("btnZIP").addEventListener("click", async ()=>{
       try{
         const user=auth.currentUser; if(!user) return alert("Haz login");
@@ -266,22 +296,7 @@ Reglas: solo JSON, punto decimal, total final.`;
         const zip=new JSZip(); let ok=0,fail=0;
         for(const e of photos){
           try{
-            const ref = e.photoPath ? storage.ref(e.photoPath) : storage.refFromURL(e.photoURL);
-
-            // Descarga autenticada (hasta 15MB por imagen)
-            let bytes;
-            try {
-              bytes = await ref.getBytes(15*1024*1024);
-            } catch (err) {
-              // Fallback: URL + fetch
-              const url = await ref.getDownloadURL();
-              const resp = await fetch(url, { mode: "cors", cache: "no-store" });
-              if (!resp.ok) throw new Error(`HTTP ${resp.status}`);
-              const ab = await resp.arrayBuffer();
-              bytes = new Uint8Array(ab);
-            }
-
-            const blob = new Blob([bytes], { type: "image/jpeg" });
+            const blob = await getBlobFromRefOrURL(e, storage);
             const d=e.date?.toDate?e.date.toDate():new Date(e.date);
             const dateISO=d.toISOString().slice(0,10);
             const prov=(e.provider||"ticket").toString().replace(/[^a-zA-Z0-9-_ ]/g,"").slice(0,40).replace(/\s+/g,"_");
@@ -290,7 +305,7 @@ Reglas: solo JSON, punto decimal, total final.`;
             ok++;
           }catch(err){
             fail++;
-            log({ fallo_zip_sdk: e.photoURL || e.photoPath, err: err.message || String(err) });
+            log({ fallo_zip_xhr: e.photoURL || e.photoPath, err: err.message || String(err) });
           }
         }
 
