--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
   <header class="topbar">
     <h1>Gastos 2N</h1>
     <button id="btnAI" class="btn" title="Guardar API Key de Gemini">⚙️ IA / API Key</button>
-    <!-- Botones de login SIEMPRE visibles -->
     <button id="btnLogin" class="btn" title="Google Sign-In">🟢 Entrar con Google</button>
     <button id="btnLogout" class="btn hidden" title="Cerrar Sesión">Salir</button>
   </header>
@@ -52,18 +51,18 @@
           <button id="btnZIP" class="btn">🗜️ ZIP fotos</button>
         </div>
       </div>
-      <p class="muted" style="margin-top:8px">Las fotos se descargan de <code>tickets/&lt;uid&gt;/YYYY-MM/archivo</code> con autorización segura.</p>
+      <p class="muted" style="margin-top:8px">Las fotos se descargan de <code>tickets/&lt;uid&gt;/YYYY-MM/archivo</code> usando el SDK (reglas privadas).</p>
     </div>
 
     <div class="panel">
       <strong>Logs</strong>
       <pre id="out"></pre>
       <details>
-        <summary>¿No ves el botón de Google o no te deja iniciar sesión?</summary>
+        <summary>¿Problemas con el login?</summary>
         <ul>
-          <li>Firebase Console → Authentication → Método de inicio → <b>Google</b>: Activado.</li>
+          <li>Authentication → Proveedor <b>Google</b>: Activado.</li>
           <li>Dominios autorizados: <code>deividgaston.github.io</code>.</li>
-          <li>Recarga con <code>?noCache=1</code> para evitar caché.</li>
+          <li>Recarga con <code>?noCache=1</code>.</li>
         </ul>
       </details>
     </div>
@@ -79,7 +78,7 @@
       <div class="body">
         <div class="field"><label>Fecha</label><input id="revDate" type="date"/></div>
         <div class="field"><label>Importe (€)</label><input id="revAmount" type="number" min="0.01" step="0.01"/></div>
-        <div class="field" style="grid-column:1/3"><label>Proveedor</label><input id="revProvider" type="text"/></div>
+        <div class="field" style="grid-column:1/2"><label>Proveedor</label><input id="revProvider" type="text"/></div>
         <div class="field"><label>Categoría</label><select id="revCategory">
           <option value="varios" selected>Varios</option>
           <option value="comida">Comida</option>
@@ -112,7 +111,7 @@
         <div class="field">
           <label>API Key de Google AI (Gemini)</label>
           <input id="aiKey" type="password" placeholder="AIza..." />
-          <small class="muted">La clave se guarda localmente en este navegador (localStorage).</small>
+          <small class="muted">Se guarda en este navegador (localStorage).</small>
         </div>
       </div>
       <footer>
@@ -149,7 +148,7 @@
     const $ = (id)=>document.getElementById(id);
     const log = (m)=>{ const out=$("out"); out.textContent += (typeof m==="string"?m:JSON.stringify(m,null,2))+"\\n"; };
 
-    // ======= TU CONFIG FIREBASE =======
+    // ======= CONFIG FIREBASE =======
     const firebaseConfig = {
       apiKey: "AIzaSyBTK8altmAR-fWqR9BjE74gEGavuiqk1Bs",
       authDomain: "gastos-2n.firebaseapp.com",
@@ -167,17 +166,11 @@
 
     // ======= GOOGLE AUTH =======
     const provider = new firebase.auth.GoogleAuthProvider();
-    document.getElementById('btnLogin').onclick = async () => {
-      try {
-        await auth.signInWithPopup(provider);
-      } catch (e) {
-        console.error(e); log("❌ Login: " + (e.code||e.message));
-        alert("Error login: " + (e.message||""));
-      }
+    $('btnLogin').onclick = async () => {
+      try { await auth.signInWithPopup(provider); }
+      catch (e) { console.error(e); log("❌ Login: " + (e.code||e.message)); alert("Error login: " + (e.message||"")); }
     };
-    document.getElementById('btnLogout').onclick = async () => {
-      await auth.signOut();
-    };
+    $('btnLogout').onclick = async () => { await auth.signOut(); };
     auth.onAuthStateChanged((user)=>{
       if (user) {
         $("whoami").textContent = `Conectado como ${user.email||user.uid}`;
@@ -293,7 +286,7 @@ Reglas: solo JSON, punto decimal, total final.`;
     });
 
     // ======= Botón ESCANEAR =======
-    document.getElementById('scanBtn').addEventListener("click", async ()=>{
+    $('scanBtn').addEventListener("click", async ()=>{
       try{
         const user=auth.currentUser; if(!user) return alert("Haz login primero");
         const input=ensureCameraInput();
@@ -319,7 +312,7 @@ Reglas: solo JSON, punto decimal, total final.`;
     });
 
     // ======= Exportar =======
-    document.getElementById('expBtn').addEventListener("click", ()=>{
+    $('expBtn').addEventListener("click", ()=>{
       const p=$("exportPanel"); p.style.display=(p.style.display==="none")?"block":"none";
       if(!$("expMonth").value) $("expMonth").value=new Date().toISOString().slice(0,7);
     });
@@ -364,28 +357,8 @@ Reglas: solo JSON, punto decimal, total final.`;
       return rows;
     }
 
-    // ---- Descarga autorizada con REST + ID token (arregla ZIP vacío) ----
-    function buildRestURL(bucket, objectPath){
-      return `https://firebasestorage.googleapis.com/v0/b/${bucket}/o/${objectPath}?alt=media`;
-    }
-    function extractObjectFromPhotoURL(photoURL){
-      const m=photoURL.match(/\/o\/([^?]+)\?/);
-      return m? m[1] : null;
-    }
-    async function downloadWithAuth(url, idToken){
-      return new Promise((resolve,reject)=>{
-        const xhr=new XMLHttpRequest();
-        xhr.open("GET", url, true);
-        xhr.responseType="blob";
-        xhr.setRequestHeader("Authorization", "Bearer " + idToken);
-        xhr.onload=()=>{ if(xhr.status>=200 && xhr.status<300) resolve(xhr.response); else reject(new Error("HTTP "+xhr.status)); };
-        xhr.onerror=()=>reject(new Error("Network error"));
-        xhr.send();
-      });
-    }
-
     // CSV
-    document.getElementById('btnCSV').addEventListener("click", async ()=>{
+    $('btnCSV').addEventListener("click", async ()=>{
       try{
         const user=auth.currentUser; if(!user) return alert("Haz login");
         const ym=$("expMonth").value; if(!ym) return alert("Selecciona un mes");
@@ -399,41 +372,52 @@ Reglas: solo JSON, punto decimal, total final.`;
       }catch(e){ console.error(e); log(e); alert("CSV error: "+(e.message||"")); }
     });
 
-    // ZIP
-    document.getElementById('btnZIP').addEventListener("click", async ()=>{
+    // ======= ZIP (SDK getBytes: sin CORS) =======
+    $('btnZIP').addEventListener("click", async ()=>{
       try{
         const user=auth.currentUser; if(!user) return alert("Haz login");
         const ym=$("expMonth").value; if(!ym) return alert("Selecciona un mes");
         const entries=await listEntriesMonth(ym,user.uid);
-        const photos=entries.filter(e=>e.photoURL);
+        const photos=entries.filter(e=>e.photoURL || e.photoPath);
         if(!photos.length) return alert("Sin fotos");
-        const idToken=await user.getIdToken(true);
-        const bucket=firebaseConfig.storageBucket;
 
-        const zip=new JSZip(); let ok=0,fail=0;
+        const maxBytes = 12 * 1024 * 1024;
+        const zip=new JSZip(); let ok=0, fail=0;
+
+        async function fetchBlobForEntry(entry){
+          // preferible: usar photoPath guardado
+          if (entry.photoPath) {
+            const ref = storage.ref(entry.photoPath);
+            const bytes = await ref.getBytes(maxBytes);
+            const mime = ref.name.toLowerCase().endsWith('.png') ? 'image/png' : 'image/jpeg';
+            return new Blob([bytes], {type: mime});
+          }
+          // compat: derivar desde URL
+          if (entry.photoURL){
+            const ref = storage.refFromURL(entry.photoURL);
+            const bytes = await ref.getBytes(maxBytes);
+            const mime = ref.name.toLowerCase().endsWith('.png') ? 'image/png' : 'image/jpeg';
+            return new Blob([bytes], {type: mime});
+          }
+          throw new Error("Sin referencia de foto");
+        }
+
         for(const e of photos){
           try{
-            let objectPath;
-            if(e.photoPath){
-              objectPath = e.photoPath.split("/").map(s=>encodeURIComponent(s)).join("%2F");
-            }else{
-              objectPath = extractObjectFromPhotoURL(e.photoURL);
-              if(!objectPath) throw new Error("No se pudo extraer el objeto");
-            }
-            const url=buildRestURL(bucket, objectPath);
-            const blob=await downloadWithAuth(url, idToken);
-
-            const d=e.date?.toDate?e.date.toDate():new Date(e.date);
-            const dateISO=d.toISOString().slice(0,10);
-            const prov=(e.provider||"ticket").toString().replace(/[^a-zA-Z0-9-_ ]/g,"").slice(0,40).replace(/\s+/g,"_");
-            zip.file(`${dateISO}_${prov}.jpg`, blob);
+            const blob = await fetchBlobForEntry(e);
+            const d = e.date?.toDate ? e.date.toDate() : new Date(e.date);
+            const dateISO = d.toISOString().slice(0,10);
+            const prov = (e.provider||"ticket").toString().replace(/[^a-zA-Z0-9-_ ]/g,"").slice(0,40).replace(/\s+/g,"_");
+            const ext = (blob.type==='image/png')?'.png':'.jpg';
+            zip.file(`${dateISO}_${prov}${ext}`, blob);
             ok++;
           }catch(err){
-            fail++; log({fallo_zip_auth:e.photoURL||e.photoPath, err: err.message||String(err)});
+            fail++; log({fallo_zip_sdk: e.photoURL||e.photoPath, err: err.message||String(err)});
           }
         }
-        const out=await zip.generateAsync({type:"blob"});
-        saveAs(out, `Fotos_Gastos_${ym}.zip`);
+
+        const outBlob = await zip.generateAsync({type:"blob"});
+        saveAs(outBlob, `Fotos_Gastos_${ym}.zip`);
         log(`🗜️ ZIP listo: ${ok} ok, ${fail} fallos`);
       }catch(e){ console.error(e); log(e); alert("ZIP error: "+(e.message||"")); }
     });
